2009-08-03	Roger Dahlkvist <ruppe@kth.se>

	* score/cpu/Makefile.am: nios2 was not in the list.

2009-08-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/psignal.c: Simplify implementation to ease coverage
	analysis.

2009-08-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/include/rtems/rtems/support.h: Fix comments.

2009-08-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/psxtransschedparam.c, posix/src/pthread.c: Add error checks
	for 0 time on sporadic scheduler replenish period and initial budget.
	This avoids having to correct for it in the TSR, so we can eliminate
	the check for ticks == 0 there.

2009-08-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/inline/rtems/score/heap.inl, score/src/heapresizeblock.c:
	Simplify routine.

2009-08-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/inline/rtems/score/heap.inl: Revert accidental commit.

2009-08-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/inline/rtems/score/heap.inl, score/src/heapwalk.c: Do not
	inline code to check if newline should be printed. It leads to branch
	path explosion which is really hard to get coverage on.

2009-07-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/heapgetinfo.c: Simplify implementation.

2009-07-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/threadinitialize.c: Rework so there is only one error exit
	path. This required setting every variable that contains memory
	allocated from the workspace to NULL early and using that assumption
	in the one failed exit path.

2009-07-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/wkspace.c: Add debug printks.

2009-07-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/mqueuedeletesupp.c: Mark unreachable section as
	RTEMS_DEBUG.

2009-07-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/killinfo.c: Add _Thread_Enable_dispatch() on EAGAIN
	error case.  Add debug print on loop processing threads waiting
	for signal.